--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
+    "daisyui": "^2.33.0",
+    "micro": "^9.4.1",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^10.15.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
-    "prisma": "^4.5.0"
+    "postcss": "^8.4.18",
+    "prisma": "^4.5.0",
+    "tailwindcss": "^3.2.1"
   }
 }
