--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
+    "@tailwindcss/typography": "^0.5.7",
     "daisyui": "^2.33.0",
     "micro": "^9.4.1",
     "next": "12.3.1",
