--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
     "@tailwindcss/typography": "^0.5.7",
+    "axios": "^1.1.3",
     "daisyui": "^2.33.0",
     "micro": "^9.4.1",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "^10.15.0"
+    "stripe": "^10.15.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
