--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "^10.15.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "zustand": "^4.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
