--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.5.0",
     "@tailwindcss/typography": "^0.5.7",
     "axios": "^1.1.3",
+    "clsx": "^1.2.1",
     "daisyui": "^2.33.0",
     "micro": "^9.4.1",
     "next": "12.3.1",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "stripe": "^10.15.0",
     "swr": "^1.3.0",
+    "tailwind-merge": "^1.7.0",
     "zustand": "^4.1.3"
   },
   "devDependencies": {
