--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
     "@tailwindcss/typography": "^0.5.7",
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "daisyui": "^2.33.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
+    "lodash": "^4.17.21",
     "micro": "^9.4.1",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
