--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "stripe": "^10.15.0",
     "swr": "^1.3.0",
     "tailwind-merge": "^1.7.0",
