--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ STRIPE_SECRET_KEY="sk_test_51LRzt2IQP6WsWq07wNYsArBpBAQ5trBhF2iFOekXFJcRIsrrp2Gw
 GOOGLE_CLIENT_ID="654215022782-eciv598i5h24nmpef3sfo5gvdajna2rm.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
 ENVIRONMENT="development"
+CMS_WH_SECRET="Bh0meClFfQspTrNjIRQ8kDh5BLUYrXF9"
 NEXT_PUBLIC_LOGIN_REDIRECT_URL=$NEXT_PUBLIC_NEXTAUTH_URL/dashboard
 NEXT_PUBLIC_NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL=http://localhost:3000
