--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "micro": "^9.4.1",
     "next": "12.3.1",
     "next-auth": "^4.15.1",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
@@ -35,7 +36,7 @@
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.18",
-    "prisma": "^4.5.0",
+    "prisma": "^4.6.0",
     "react-json-formatter": "^0.3.2",
     "tailwindcss": "^3.2.1"
   }
